fixed bug / dealt with width respnsive font-size issues of AsideSection on small devices

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -110,16 +110,16 @@
     padding-top:5% !important;
   }
   .aside-section #logo {
-    top:20px !important;
+    top:70px !important;
   }
   .aside-section #logo a{
-    font-size:3.8vh !important;
-  }
-  .aside-section #logo span{
     font-size:4.1vh !important;
   }
+  .aside-section #logo span{
+    font-size:4.5vh !important;
+  }
   .aside-section .nav li a{
-    font-size:2.5vh !important;
+    font-size:2.8vh !important;
   }
 }
 @media (max-height: 450px) and (max-width: 660px) {
